// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - invalid config 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Failed to connect to Windsurf API. Please check your service key.: Invalid service key",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - valid config 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index streams - autocomplete analytics 1`] = `
[
  {
    "date": "2024-01-15",
    "email": "john@company.com",
    "ide": "vscode",
    "language": "typescript",
    "num_acceptances": 45,
    "num_lines_accepted": 280,
  },
  {
    "date": "2024-01-15",
    "email": "jane@company.com",
    "ide": "vscode",
    "language": "typescript",
    "num_acceptances": 45,
    "num_lines_accepted": 280,
  },
]
`;

exports[`index streams - cascade lines 1`] = `
[
  {
    "day": "2024-01-15",
    "email": "john@company.com",
    "linesAccepted": 80,
    "linesSuggested": 150,
  },
  {
    "day": "2024-01-16",
    "email": "john@company.com",
    "linesAccepted": 120,
    "linesSuggested": 200,
  },
  {
    "day": "2024-01-15",
    "email": "jane@company.com",
    "linesAccepted": 80,
    "linesSuggested": 150,
  },
  {
    "day": "2024-01-16",
    "email": "jane@company.com",
    "linesAccepted": 120,
    "linesSuggested": 200,
  },
]
`;

exports[`index streams - cascade runs 1`] = `
[
  {
    "cascadeId": "cascade_123",
    "day": "2024-01-15",
    "email": "john@company.com",
    "messagesSent": 5,
    "mode": "CONVERSATIONAL_PLANNER_MODE_DEFAULT",
    "model": "gpt-4",
    "promptsUsed": 3,
  },
  {
    "cascadeId": "cascade_456",
    "day": "2024-01-16",
    "email": "john@company.com",
    "messagesSent": 8,
    "mode": "CONVERSATIONAL_PLANNER_MODE_READ_ONLY",
    "model": "claude-3",
    "promptsUsed": 6,
  },
  {
    "cascadeId": "cascade_123",
    "day": "2024-01-15",
    "email": "jane@company.com",
    "messagesSent": 5,
    "mode": "CONVERSATIONAL_PLANNER_MODE_DEFAULT",
    "model": "gpt-4",
    "promptsUsed": 3,
  },
  {
    "cascadeId": "cascade_456",
    "day": "2024-01-16",
    "email": "jane@company.com",
    "messagesSent": 8,
    "mode": "CONVERSATIONAL_PLANNER_MODE_READ_ONLY",
    "model": "claude-3",
    "promptsUsed": 6,
  },
]
`;

exports[`index streams - chat analytics 1`] = `
[
  {
    "chat_loc_used": 150,
    "date": "2024-01-15",
    "email": "john@company.com",
    "ide": "vscode",
    "language": "typescript",
  },
  {
    "chat_loc_used": 150,
    "date": "2024-01-15",
    "email": "jane@company.com",
    "ide": "vscode",
    "language": "typescript",
  },
]
`;

exports[`index streams - pcw analytics 1`] = `
[
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-10-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-11-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2024-12-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-01-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-02-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-03-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-04-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-05-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-06-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-07-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-08-31",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-07",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-08",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-09",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-10",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-11",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-12",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-13",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-14",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-15",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-16",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-17",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-18",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-19",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-20",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-21",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-22",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-23",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-24",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-25",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-26",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-27",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-28",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-29",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-09-30",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-10-01",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-10-02",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-10-03",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-10-04",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-10-05",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
  {
    "codeium_bytes": 6018,
    "codeium_bytes_by_autocomplete": 4593,
    "codeium_bytes_by_command": 1425,
    "date": "2025-10-06",
    "percent_code_written": 0.68,
    "total_bytes": 8850,
    "user_bytes": 2832,
  },
]
`;

exports[`index streams - user page analytics 1`] = `
[
  {
    "activeDays": 15,
    "apiKey": "hashed_api_key_123",
    "disableCodeium": false,
    "email": "john@company.com",
    "lastAutocompleteUsageTime": "2024-03-18T09:45:00Z",
    "lastChatUsageTime": "2024-03-18T10:15:00Z",
    "lastCommandUsageTime": "2024-03-18T10:20:00Z",
    "lastUpdateTime": "2024-03-18T10:30:00Z",
    "name": "John Developer",
    "signupTime": "2024-01-15T08:00:00Z",
  },
  {
    "activeDays": 22,
    "apiKey": "hashed_api_key_456",
    "email": "jane@company.com",
    "lastAutocompleteUsageTime": "2024-03-17T14:00:00Z",
    "lastChatUsageTime": "2024-03-17T13:30:00Z",
    "lastCommandUsageTime": "2024-03-17T14:10:00Z",
    "lastUpdateTime": "2024-03-17T14:20:00Z",
    "name": "Jane Engineer",
    "signupTime": "2024-01-10T12:00:00Z",
  },
]
`;
